[package]
name = "aion-integration"
version = "1.0.0"
edition = "2021"
authors = ["AION Development Team"]
description = "AION-CR ↔ ECTUS-R Native Integration Bridge"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
dashmap = "5.0"
parking_lot = "0.12"
rayon = "1.7"
crossbeam = "0.8"
bincode = "1.3"
lz4 = "1.24"
sha3 = "0.10"
rand = "0.8"
metrics = "0.21"
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tonic = "0.10"
prost = "0.12"
mlua = { version = "0.9", features = ["lua54", "async"] }
wasmtime = "13.0"
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
ndarray = "0.15"
linfa = "0.7"
smartcore = "0.3"
petgraph = "0.6"
polars = { version = "0.33", features = ["lazy", "temporal", "strings"] }
arrow = "48.0"
datafusion = "32.0"
redis = { version = "0.23", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.0"