[package]
name = "aion-server"
version = "1.0.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
aion-core = { path = "../aion-core" }
aion-api = { path = "../aion-api" }

[[bin]]
name = "aion-server"
path = "src/main.rs"